atualizados level das skills

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://www.linkedin.com/in/s%C3%A9rgio-lima-dev-fontend/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/sdlima4025" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.instagram.com/limaipoan27/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                 </div>
 
                 <div class="home__img">
